tests/NormalTests/paczka1/fuzzy1/20708388.err
Error in line 3: NKi S552 37,33
Error in line 11: 6nfskD A424 36,9
Error in line 18: PyjD S552 90,3
Error in line 25: NKi A424 68,8
